--- a/index.css
+++ b/index.css
@@ -1,2 +1,5 @@
 @import url(node_modules/@a1rth/css-normalize/normalize.css);
 @import url(styles/variables.css);
+@import url(styles/basic.css);
+@import url(styles/profile.css);
+@import url(styles/navigation.css);
