--- a/index.css
+++ b/index.css
@@ -3,3 +3,4 @@
 @import url(styles/basic.css);
 @import url(styles/profile.css);
 @import url(styles/navigation.css);
+@import url(styles/main.css);
