--- a/index.css
+++ b/index.css
@@ -4,3 +4,4 @@
 @import url(styles/profile.css);
 @import url(styles/navigation.css);
 @import url(styles/main.css);
+@import url(styles/footer.css);
